# CampusEase

./: .1aco63munrwbg4061793689~  .2u79fw28nzvqd597494442~  .30dur8rw202md2583287132~  .384cihiigms3l3166545607~  .3agod85ziib38348759497~  .3gsdkp863bf681556563882~  .64z8afgw05ad1083253350~  .6hk29jtsvf6s2617874372~  .breakpoints  .ccfq02th4oqk2889734787~  .jtrxotz6bgmk1032768072~  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
instance/: site.db
static/: home_style.css  hostel.js  index.js  landf.js
templates/: ayie.html  buyandsell.html  home.html  hostelcomplain.html  layout.html  login.html  lostandfound.html  messcomplain.html  reset_request.html  reset_token.html
