[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask-bcrypt = "^1.0.1"
wtforms = "^3.1.0"
bleach = "^6.1.0"
flask-mail = "^0.9.1"
sqlalchemy = "^2.0.22"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.0"
flask-wtf = "^1.2.1"
itsdangerous = "^2.1.2"
jwt = "^1.3.1"
pillow = "^10.1.0"
werkzeug = "^3.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"